--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,8 @@
     <string name="product2">Product 02</string>
     <string name="product3">Product 03</string>
     <string name="product4">Product 04</string>
-
+    <string name="total">Total:</string>
+    <string name="dollar_zero">$  00.00</string>
 
 
 </resources>
